build/0.2.2/readme.md

# iPhoto
------------------------------------------------

一个用纯 NodeJS 编写的照片归类小工具。  
使用该工具，可以对从手机中导出的照片、视频等文档进行归类。   
至于从其它设备如数码相机导出的照片和视频等，理论上也可以处理。

## 产生背景

我们在使用手机时会产生很多图片和视频等珍贵的资料文档，如：
- 拍摄的照片。
- 录制的视频。
- 手机截屏。
- 在使用各种 APP 时保存的图片和视频等。

用 Windows 导出到电脑时，虽然可以按日期进行归类到对应的目录，但缺少进一步的归类，不方便收集和处理。
例如，用手机拍摄的照片，照片中就包含有完整的 EXIF 信息，EXIF 信息是一种描述照片信息的元数据，包括拍摄日期、拍摄地点、分辨率等。

> EXIF 信息，是可交换图像文件的缩写，是专门为数码相机的照片设定的，可以记录数码照片的属性信息和拍摄数据。 EXIF 可以附加于 JPEG、TIFF、RIFF 等文件之中，为其增加有关数码相机拍摄信息的内容和索引图或图像处理软件的版本信息。

手机截屏、各种 APP 保存得到的图片则没有 EXIF 信息。  
手机截屏的后缀名为 `.PNG`，从 APP 中保存得到的图片则为 `.JPG`。  
录制的视频格式为 `.MOV`，而在微信上保存的视频一般为 `.mp4` 等等。  

基于以上特征情况，特写了个小工具，用于把从手机中导出的照片、视频等文档进行归类。

## 使用方式



在项目根目录，运行 `node index` 即可。  
该工具使用拷贝的方式进行处理，不会对原文件造成影响，请放心使用。  
当目标文件存在时，可以通过配置指定是覆盖还是跳过，默认是跳过。  





## 配置

在使用之前，请根据个人情况修改根目录下的 `config.js` 文件中的配置内容。一般而言，只需要配置 `src` 和 `dest.base` 字段即可，这两个字段指定了要处理的输入目录和输出的目标目录，其它字段保持为默认值即可。


### 总配置

名称 | 类型 | 描述
------ | ------ | ------
`src` | ***string*** | 要扫描的输入目录。
`dest` | ***object*** | 输出目录，复合值，具体字段见下表。
`exif` | ***object*** | EXIF 信息的配置对象，复合值，具体字段见下表。
`excludes` | ***Array*** | 要排除的文件类型。如一些隐藏的系统文件 `.ini` 等。

```js
{
	src: '',
    dest: '',
    exif: {},
    excludes: [],
}
```

### dest 配置对象
名称 | 类型 | 描述
------ | ------ | ------
`base` | ***string*** | 输出的基准目录，输出的所有路径都相对于此目录。
`overwrite` | ***boolean*** | 当要拷贝到的目标文件已存时，是否进行覆盖。默认是跳过。
`error` | ***string*** | 发生异常时输出 JSON 数据的保存路径。如果为空或不指定，则不输出。
`photo` | ***string*** | 针对有完整 EXIF 信息的照片的保存路径。
`.jpg` | ***string*** | 针对后缀名为 `.jpg` (后缀名不区分大小写) 的图片的保存路径。
`.png` | ***string*** | 针对后缀名为 `.png` (后缀名不区分大小写) 的图片的保存路径。
`.mov` | ***string*** | 针对后缀名为 `.mov` (后缀名不区分大小写) 的视频的保存路径。
`.mp4` | ***string*** | 针对后缀名为 `.mp4` (后缀名不区分大小写) 的视频的保存路径。
`.*` | ***string*** | 针对后缀名以上其它情况(后缀名不区分大小写) 的文件的保存路径。
`process` | ***function*** | 路径处理函数，提供一个机会给用户自己定制输出的文件名。

#### process 处理函数
dest 配置对象中，支持提供一个生成文件路径的处理函数：`process(require, data)`。  
如果提该函数，则在处理每个文件时会调用它，并且它会接收到两个参数：

- 参数 require， 是一个函数，可用于加载 `iPhoto` 本工具内部使用的模块。
- 参建 data，是一个普通数据对象。

其中 data 分两种情况而成员结构不同：

##### 处理带有 exif 信息的照片
当处理带有 exif 信息的照片文件时，参数 `data` 的结构为：

名称 | 类型 | 描述
------ | ------ | ------
`make` | ***string*** | 相机设备的制造商，如 `Apple`。
`model` | ***string*** | 相机设备的名称，如 `iPhone 7 Plus`。
`year` | ***string*** | 相片的拍摄日期中的年份，如 `2018`。
`month` | ***string*** | 相片的拍摄日期中的月份，如 `05`。
`day` | ***string*** | 相片的拍摄日期中的日份，如 `29`。
`name` | ***string*** | 原始的基本文件名，如 `IMG_9070.JPG`
`file` | ***string*** | 原始的完整文件名。
`sample` | ***string*** | 填充模板。来源于 `config.js` 的 `photo` 字段。
`ext` | ***string*** | 文件名的后缀名部分，如 `.JPG`。
`stat` | ***object*** | 文件的统计信息对象，由 NodeJS 原生方法 `fs.statSync(file)` 获取到。
`exif` | ***object*** | exif 信息对象。





##### 处理普通图片和其它文档
当处理不带有 exif 信息的图片文件的其它文档时，参数 `data` 的结构为：

名称 | 类型 | 描述
------ | ------ | ------
`base` | ***string*** | 输出的基准目录。来源于 `config.js` 的 `base` 字段。
`name` | ***string*** | 原始的基本文件名，如 `IMG_9070.JPG`
`file` | ***string*** | 原始的完整文件名。
`sample` | ***string*** | 填充模板。来源于 `config.js` 的 `photo` 字段。
`ext` | ***string*** | 文件名的后缀名部分，已转换成小写，如 `.jpg`。
`stat` | ***object*** | 文件的统计信息对象，由 NodeJS 原生方法 `fs.statSync(file)` 获取到。
`date` | ***string*** | 文件的修改日期，也就是照片的真正的`创建日期`。



### exif 配置对象
名称 | 类型 | 描述
------ | ------ | ------
`exts` | ***Array*** | 需要提取 EXIF 信息的文件名后缀。



**注意：** 如果需要扩展针对其它类型的处理，请自行增加一条记录，如 `.txt`。


### 配置中的模板填充
在配置的值中，路径类型的可以使用模板填充来获得某些信息。

名称 | 类型 | 描述
------ | ------ | ------
`make` | ***string*** | 设备制造商名称，如 `Apple`
`model` | ***string*** | 设备型号，如 `iPhone 4S`
`year` | ***string*** | 照片拍摄年份，如 `2016`
`month` | ***string*** | 照片拍摄月份，如 `08`
`day` | ***string*** | 照片拍摄日份，如 `01`
`name` | ***string*** | 原始的基本文件名，如 `IMG_9070.JPG`
`date` | ***string*** | 针对没有 EXIF 信息的文件，默认取最后一级目录名为拍摄日期，如 `2016-08-29`

要使用以上字段，请使用花括号 `{}` 括起来，如 `{make}`


### 默认配置

在根目录的 `config.js` 文件中：

```js

module.exports = {

    //扫描的来源目录。
    src: [
        'E:/Photo/iPhone7P-iTools/2018_04/',
    ],

    //输出的目标。 
    dest: {
        //输出的基准目录，以下路径相对于此目录。
        base: 'E:/Photo/iPhone7P-out/',

        //是否覆盖目标文件。
        overwrite: false,

        //发生错误时的输出文件。
        error: 'error.json',

        //可以提取出 exif 信息的照片的输出路径。
        photo: 'photo/{make}/{model}/{year}/{year}-{month}-{day}/{name}',

        //以下是不能提取出 exif 信息的文件。
        '.jpg': 'jpg/{date}/{name}',
        '.png': 'png/{date}/{name}',
        '.mov': 'mov/{date}/{name}',
        '.mp4': 'mp4/{date}/{name}',
        '.*': 'other/{date}/{name}',

        //生成文件名的处理函数。
        //可以返回一个字符串或一个对象。 
        //如果不提供，则使用默认的。
        process: function (require, data) {
            //由 iTools 导出的图片、视频等文件，
            //命名格式如 `20180529_IMG_1153.JPG`，前面的 8 位是文档创建的日期。
            //由 Windows 导出的，则为原始的文件名如 `IMG_1153.JPG`。 
            //因此需要判断是哪种格式。

            var name = data.name;
            var reg = /^\d{8}_/;

            //不符合以如 `20180529_` 开头的命名格式，不在这里处理。
            if (!reg.test(name)) {
                return;
            }

            var $ = require('$');           //defineJS 库。
            var $Date = $.require('Date');  //defineJS 库里的模块。
            var dt = name.slice(0, 8);      //日期串，如 `20180529`
            var year = dt.slice(0, 4);      //年份，如 `2018`
            var month = dt.slice(4, 6);     //月份，如 `05`
            var day = dt.slice(6);          //日份，如 `29`
            var date = year + '-' + month + '-' + day;  //如 `2018-05-29`

            //尝试解析成标准的 Date 实例。
            dt = $Date.parse(date);

            //前面的 8 位数字无法解析成有效的日期实例，不在这里处理。
            if (!dt) {
                return;
            }

            //至此，确定是如 `20180529_IMG_1153.JPG` 的命名规则，
            //则提取后半部分的名称，如 `IMG_1153.JPG`。
            name = name.slice(9);

            //有 exif 信息的，只需要改一下名称即可。
            //模板字符串填充中需要用到其它字段，如 `make`、`model`，则默认会从 exif 中提取。
            //此处只需要覆盖一下要改的字段即可。
            //有 exif 信息的对应的模板字符串名称为 `photo`
            if (data.exif) {
                return { 'name': name, };
            }

            //其它文档。
            //要提供的字段就参考对应的模板字符串，如名称为 `.jpg`、`.png` 等。
            return {
                'date': date,
                'name': name,
            };

        },
        
    },

    //要排除的文件类型。
    excludes: [
        '.ini',
    ],

    exif: {
        //需要进行 exif 信息抽取的文件类型。
        'exts': ['.JPG'],
    }

}


```


